--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     max-width: 420px;
     margin: 0 auto;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     gap: 1rem;
   }
 
@@ -416,10 +416,11 @@
 
   const storedPhotos = JSON.parse(localStorage.getItem("photos")) || [];
 
-  storedPhotos.forEach((photo, index) => {
+  storedPhotos.slice().reverse().forEach((photo, index) => {
     const card = document.createElement("div");
     card.className = "catch-card";
 
+    // Photo element
     const img = document.createElement("img");
     img.src = photo.src;
     img.alt = photo.caption || "Catch photo";
@@ -427,6 +428,7 @@
     img.addEventListener("click", () => openModal(photo.src));
     card.appendChild(img);
 
+    // Info container
     const info = document.createElement("div");
     info.className = "catch-info";
 
@@ -449,11 +451,14 @@
       date.textContent = "Caught: " + d.toLocaleString();
       info.appendChild(date);
     }
+
     card.appendChild(info);
 
+    // Buttons container
     const buttonRow = document.createElement("div");
     buttonRow.className = "catch-buttons";
 
+    // Share (download) button
     const shareButton = document.createElement("button");
     shareButton.textContent = "Download";
     shareButton.title = "Download Catch Card";
@@ -465,16 +470,20 @@
       clone.style.left = '0';
       clone.style.background = '#fff';
       document.body.appendChild(clone);
+
       const buttons = clone.querySelector(".catch-buttons");
       if (buttons) buttons.remove();
 
       html2canvas(clone).then(canvas => {
         const ctx = canvas.getContext("2d");
+
         const watermarkImg = new Image();
         watermarkImg.src = "icon_192x192.png";
+
         watermarkImg.onload = () => {
           ctx.globalAlpha = 0.3;
           const size = 64;
+
           const infoBlock = clone.querySelector(".catch-info");
           if (infoBlock) {
             const infoRect = infoBlock.getBoundingClientRect();
@@ -483,7 +492,13 @@
             const offsetY = infoRect.top - cloneRect.top;
             ctx.drawImage(watermarkImg, offsetX, offsetY, size, size);
           } else {
-            ctx.drawImage(watermarkImg, canvas.width - size - 10, canvas.height - size - 10, size, size);
+            ctx.drawImage(
+              watermarkImg,
+              canvas.width - size - 10,
+              canvas.height - size - 10,
+              size,
+              size
+            );
           }
 
           const link = document.createElement("a");
@@ -497,56 +512,25 @@
       });
     });
 
-    const deleteButton = document.createElement("button");
-    deleteButton.textContent = "Delete";
-    deleteButton.title = "Delete This Photo";
-    deleteButton.addEventListener("click", () => {
-      if (!confirm("Delete this photo?")) return;
-      const photos = JSON.parse(localStorage.getItem("photos")) || [];
-      const updatedPhotos = photos.filter(p => p.timestamp !== photo.timestamp);
-      localStorage.setItem("photos", JSON.stringify(updatedPhotos));
-      renderPhotoPosts();
-    });
-
     buttonRow.appendChild(shareButton);
-    buttonRow.appendChild(deleteButton);
     card.appendChild(buttonRow);
+
     gallery.appendChild(card);
   });
-} // ✅ CLOSE renderPhotoPosts here
+}
 
   function openModal(src) {
-  const modal = document.getElementById("imageModal");
+  const modal = document.getElementById("photoModal");
   const modalImg = document.getElementById("modalImg");
   modalImg.src = src;
   modal.style.display = "flex";
 }
 
 function closeModal() {
-  const modal = document.getElementById("imageModal");
+  const modal = document.getElementById("photoModal");
   modal.style.display = "none";
-  const modalImg = document.getElementById("modalImg");
-  modalImg.src = "";
 }
 
-document.getElementById("modalClose").addEventListener("click", closeModal);
-window.addEventListener("keydown", e => {
-  if (e.key === "Escape") closeModal();
-});
-
-function openInstagramModal() {
-  const modal = document.getElementById("instagramModal");
-  modal.style.display = "flex";
-  setTimeout(() => {
-    modal.style.display = "none";
-  }, 3000);
-}
-
-document.getElementById("closeInstagramModal").addEventListener("click", () => {
-  document.getElementById("instagramModal").style.display = "none";
-});
-
-  // ===== Fish Data and Tally =====
   const fishData = [
     { name: 'Largemouth Bass', rig: 'Texas Rig, Wacky Rig', bait: 'Plastic worms, Jigs, Crankbaits', count: 0 },
     { name: 'Smallmouth Bass', rig: 'Drop Shot', bait: 'Minnow', count: 0 },
