--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 
       const timestamp = new Date().toISOString();
 
-      storedPhotos.push({
+      storedPhotos.unshift({
         src: event.target.result,
         caption,
         location,
