--- a/index.html
+++ b/index.html
@@ -501,6 +501,21 @@
             );
           }
 
+          // Delete button
+          const deleteButton = document.createElement("button");
+          deleteButton.textContent = "Delete";
+          deleteButton.title = "Delete this photo";
+          deleteButton.addEventListener("click", () => {
+            if (confirm("Are you sure you want to delete this photo?")) {
+    // Remove from storedPhotos array
+              storedPhotos.splice(storedPhotos.length - 1 - index, 1); 
+    // Explanation: Because you unshift photos and render reverses, index corresponds to reversed array
+              localStorage.setItem("photos", JSON.stringify(storedPhotos));
+              renderPhotoPosts();
+            }
+          });
+buttonRow.appendChild(deleteButton);
+
           const link = document.createElement("a");
           link.download = `catch-card-${index + 1}.png`;
           link.href = canvas.toDataURL("image/png");
