--- a/index.html
+++ b/index.html
@@ -58,6 +58,27 @@
     background: #f2eee3;
   }
 
+  .button {
+  background-color: #4b2e1e; /* dark wood tone */
+  color: #fff;
+  padding: 10px 16px;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  font-family: 'Verdana', sans-serif;
+  box-shadow: inset 0 0 2px #000, 2px 2px 5px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  transition: transform 0.1s, box-shadow 0.1s;
+}
+.button:hover {
+  background-color: #5a3a29;
+  transform: scale(1.02);
+}
+.button:active {
+  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.6);
+  transform: scale(0.98);
+}
+
   /* Memories feed container */
   #photoGallery {
     max-width: 420px;
@@ -250,16 +271,17 @@
 </div>
 
 <section id="memoriesTab" class="tab active">
-  <input type="file" id="photoInput" accept="image/*" multiple />
+  <input type="file" id="photoInput" class="button" accept="image/*" multiple />
   
   <div style="margin-top: 10px;">
     <label>
       Caption: <input type="text" id="captionInput" placeholder="Enter caption here" />
     </label>
+    <br>
     <label style="margin-left: 20px;">
       Location: <input type="text" id="locationInput" placeholder="Enter location here" />
     </label>
-    <button id="uploadButton" style="margin-left: 20px;">Upload Photos</button>
+    <button id="uploadButton" class="button" style="margin-left: 20px;">Upload Photos</button>
   </div>
   
   <div id="photoGallery" aria-live="polite" aria-label="Memories photo feed"></div>
