--- a/index.html
+++ b/index.html
@@ -274,13 +274,9 @@
   <input type="file" id="photoInput" class="button" accept="image/*" multiple />
   
   <div style="margin-top: 10px;">
-    <label>
-      Caption: <input type="text" id="captionInput" placeholder="Enter caption here" />
-    </label>
+    <label>Caption: <input type="text" id="captionInput" placeholder="Enter caption here" /></label>
     <br>
-    <label style="margin-left: 20px;">
-      Location: <input type="text" id="locationInput" placeholder="Enter location here" />
-    </label>
+    <label style="margin-left: 20px;">Location: <input type="text" id="locationInput" placeholder="Enter location here" /></label>
     <button id="uploadButton" class="button" style="margin-left: 20px;">Upload Photos</button>
   </div>
   
